# C89_pthread_ring_buffer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  makefile  makefile.old  ringBuffer.h
eg/src/: file_cp.c
src/: ringBuffer.c
